Ajout de la gestion des trains

--- a/NF17-SCF/admin/type_train/ajout_t_train.html
+++ b/NF17-SCF/admin/type_train/ajout_t_train.html
@@ -30,6 +30,7 @@
         <input type="number" class="form-control" id="Vitesse" name="Vitesse" placeholder="100">
       </div>
         <button type="submit" class="btn btn-primary">Ajouter le type de train</button>
+        <a href='../admin.html' class='btn btn-primary btn-lg btn-block'>Revenir au menu principal administrateur</a>
       </form>
   </body>
 </html>
