Ajout de l'administration des arrêts

--- a/NF17-SCF/admin/admin.html
+++ b/NF17-SCF/admin/admin.html
@@ -56,6 +56,7 @@
       <div class="tab-pane fade" id="nav-arret" role="tabpanel" aria-labelledby="nav-arret-tab">
         <div class="container">
           <div class="nav flex-column nav-pills mx-auto text-center p-3 mb-2 bg-warning text-white" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+            <a class="nav-link" href="arret/ajout_arret.php" role="tab" aria-selected="true">Ajouter un arrêts</a>
             <a class="nav-link" href="arret/gerer_arret.php" role="tab" aria-selected="true">Gérer les arrêts</a>
           </div>
         </div>
