--- a/NF17-SCF/admin/gare/ajout_gare.html
+++ b/NF17-SCF/admin/gare/ajout_gare.html
@@ -112,7 +112,7 @@
         </select>
       </div>
       <button type="submit" class="btn btn-primary">Ajouter la gare</button>
-      <a href='../admin.html' class='btn btn-primary btn-lg btn-block'>Revenir au menu principal administrateur</a>
+      <a href='../admin.html' class='btn btn-secondary'>Retour au menu principal administrateur</a>
     </form>
     <div>
     </div>
