Ajout d'un calendrier

--- a/NF17-SCF/admin/admin.html
+++ b/NF17-SCF/admin/admin.html
@@ -62,7 +62,12 @@
         </div>
       </div>
       <div class="tab-pane fade" id="nav-calendrier" role="tabpanel" aria-labelledby="nav-calendrier-tab">
-        Programmation des trains ici
+        <div class="container">
+          <div class="nav flex-column nav-pills mx-auto text-center p-3 mb-2 bg-warning text-white" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+            <a class="nav-link" href="programmation/ajout_calendrier.php" role="tab" aria-selected="true">Ajouter un calendrier</a>
+            <a class="nav-link" href="#" role="tab" aria-selected="true">Gérer les programmations</a>
+          </div>
+        </div>
       </div>
       <div class="tab-pane fade" id="nav-lieu" role="tabpanel" aria-labelledby="nav-lieu-tab">
         <div class="container">
